# ai-safety

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: coverage.ini  pytest.ini  ruff.toml  vulture.py
experiments/01_capability_probing/: README.md  analyse_results.py  probe_models.py  run_capability_probing.py  run_probe_models.py
experiments/02_jailbreak_testing/: README.md  analyse_results.py  jailbreak_models.py  run_jailbreak_tests.py
experiments/03_behavioral_evals/: README.md  analyse_results.py  behavioral_eval.py  run_behavioral_evals.py
experiments/04_multimodal_safety/: README.md  analyse_results.py  generate_test_images.py  vision_jailbreaks.py
experiments/05_induction_heads/: README.md  ablate_heads.py  analyse_circuits.py  find_induction_heads.py  visualize_ablations.py
experiments/06_guardrail_testing/: PLAN.md  README.md  access_control.py  analyse_results.py  input_guardrails.py  output_guardrails.py  run_tests.sh  safety_pipeline.py  test_guardrails.py  test_judge_output.py
experiments/07_garak_vulnerability_scan/: README.md  analyse_results.py  compare_methods.py  parse_garak_results.py  run_garak_scans.py
experiments/08_inspect_ai_evaluations/: README.md  analyse_results.py  run_inspect_evals.py
papers/: 2021_elhage_mathematical-framework-for-transformer-circuits.md  2022_anthropic_toy-models-of-superposition.md  2022_olsson_in-context-learning-and-induction-heads.md  2024_anthropic_scaling-monosemanticity.md  README.md
resources/: 2023_anthropic_core-views-on-ai-safety.md  README.md
(+127 files in other folders)
