[project]
name = "ai-safety"
version = "0.1.0"
description = "AI Safety Engineering Resources and Evaluation Frameworks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Chris Jackett" }
]

dependencies = [
    # Frontier model APIs
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "google-genai>=0.1.0",
    "ollama>=0.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]
