[project]
name = "ai-safety"
version = "0.1.0"
description = "AI Safety Engineering Resources and Evaluation Frameworks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Chris Jackett" }
]

dependencies = [
    # Frontier model APIs
    "openai>=1.45.0,<2",
    "anthropic>=0.8.0",
    "google-genai>=0.1.0",
    "ollama>=0.1.0",
    "transformer-lens>=2.15.4",
    # Data analysis and visualization
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.8.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "garak>=0.13.3",
    "tabulate>=0.9.0",
    "inspect-ai>=0.3.159",
    "pyrit>=0.9.0",
    "types-pyyaml>=6.0.12.20250915",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "black>=25.12.0",
    "deptry>=0.24.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "vulture>=2.14",
]
